--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                         <option value="spectrum">Спектр</option>
                         <option value="waveform">Волновая форма</option>
                         <option value="circular">Круговой</option>
+                        <option value="tentacles">Щупальца</option>
                     </select>
                 </div>
                 
