--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <label>Автоматическая отправка</label>
                     <label class="switch">
                         <input type="checkbox" id="autoSendToggle" checked>
-                        <span class="slider"></span>
+                        <span class="slider round"></span>
                     </label>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                     <label>Тема</label>
                     <label class="switch">
                         <input type="checkbox" id="themeToggle">
-                        <span class="slider"></span>
+                        <span class="slider round"></span>
                         <span class="switch-label" id="themeLabel">Тёмная</span>
                     </label>
                 </div>
@@ -205,7 +205,7 @@
                     <label>Показывать визуализацию</label>
                     <label class="switch">
                         <input type="checkbox" id="visualizerToggle" checked>
-                        <span class="slider"></span>
+                        <span class="slider round"></span>
                     </label>
                 </div>
             </div>
