--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
                 </div>
                 <div class="record-button-container">
                     <button id="recordButton"><i class="fas fa-microphone"></i></button>
-                    <div id="recordingStatus"></div>
-                    <div id="recordingTimer">00:00</div>
+                    <div class="record-info">
+                        <div id="recordingStatus"></div>
+                        <div id="recordingTimer">00:00</div>
+                    </div>
                 </div>
             </div>
             
